# rustweb

./: .env  .env.example  .gitattributes  Cargo.toml  README.md
migrations/: 20241023071417_create_table_messages.up.sql  20241023071417_create_users_table.up.sql  20241023164342_create_table_users.up.sql
src/: main.rs
src/controllers/: authentication.rs  dashboard.rs  index.rs  message.rs  message_controller.rs  mod.rs
src/models/: message.rs  message_model.rs  user.rs
src/routes/: authentication.rs  dashboard.rs  index.rs  message.rs  message_routes.rs  mod.rs
src/services/: authenticator.rs  csrf.rs  integrity.rs  mod.rs  state.rs
src/templates/: authentication.rs  dashbaord.rs  dashboard.rs  dashboard_template.rs  message.rs  message_template.rs  messages.rs  mod.rs  toast.rs
templates/: authentication.html  dashboard.html  index.html  message.html  messages.html  toast.html
templates/authentication/: form_name.html  form_password.html  login.html  login_form.html  register_form.html
templates/base/: base.html  footer.html  nav.html
templates/message/: event.html  form_content.html  form_title.html  index.html  show.html
