[package]
name = "rustweb"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "*" }
axum = { version = "*" }
axum_csrf = { version = "*", features = ["layer"] }
axum-login = { version = "*" }
dotenv = { version = "*" }
futures = { version = "*" }
http = { version = "*" }
password-auth = { version = "*" }
serde = { version = "*", features = ["derive"] }
sqlx = { version = "*", features = ["mysql", "runtime-tokio", "tls-rustls-ring"] }
time = { version = "*" }
tokio = { version = "*", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tokio-stream = { version = "*", features = ["sync"] }
tower-http = { version = "*", features = ["fs", "trace"] }
tower-sessions = { version = "*" }
tracing = { version = "*" }
tracing-subscriber = { version = "*", features = ["env-filter"] }
