[package]
name = "rustweb"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "*" }
axum = { version = "*" }
axum_csrf = { version = "*", features = ["layer"] }
axum-login = { version = "*" }
dotenvy = { version = "*" }
password-auth = { version = "*" }
serde = { version = "*" }
sqlx = { version = "*", features = ["mysql", "runtime-tokio"] }
time = { version = "*" }
tokio = { version = "*", features = ["rt-multi-thread", "signal"] }
tokio-stream = { version = "*", features = ["sync"] }
tower-http = { version = "*", features = ["fs", "trace"] }
tracing = { version = "*" }
tracing-subscriber = { version = "*", features = ["env-filter"] }
