[package]
name = "rustweb"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "*"
async-trait = "*"
axum = "*"
axum_csrf = { version = "*", features = ["layer"] }
axum-login = "*"
dotenvy = "*"
password-auth = "*"
serde = "*"
sqlx = { version = "*", features = ["mysql", "runtime-tokio"] }
time = "*"
tokio = { version = "*", features = ["rt-multi-thread", "signal"] }
tokio-stream = { version = "*", features = ["sync"] }
tower-http = { version = "*", features = ["fs", "trace"] }
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
